opa-policy-fun/spec/constraints/restrict-registries.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: pod-allowed-registries
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    repos:
      - "docker.io/"
      - "gcr.io/"
      - "quay.io/"
      - "nginx:"
      - "redis:"
      - "postgres:"
